; run menhir test

(alias
 (name olly)
 (deps ../bin/olly.exe))

(executable
 (name test_gc_stats))

; (alias
;  (name test-gc)
;  (deps ../_build/default/test/test_gc_stats.exe))

; (rule
;  (alias runtest)
;  (deps
;   (alias olly)
;   (alias test-gc))
;  (action
;   (run olly gc-stats "_build/default/test/test_gc_stats.exe")))

(rule
 (alias runtest)
 (deps
  (alias olly)
  test_gc_stats.exe)
 (action
  (run olly gc-stats "./test_gc_stats.exe 19")))

(rule
 (alias trace)
 (enabled_if
  (>= %{ocaml_version} 5.1.0))
 (target test.trace)
 (deps
  (alias olly)
  test.exe)
 (action
  (progn
   (run olly trace test.trace ./test.exe))))

(executable
 (name test)
 (enabled_if
  (>= %{ocaml_version} 5.1.0))
 (libraries runtime_events unix))