; run menhir test

(executable
 (name test_gc_stats)
 (modules test_gc_stats))

(executable
 (name test_fib)
 (modules test_fib)
 (enabled_if
  (>= %{ocaml_version} 5.1.0))
 (libraries runtime_events unix))

(rule
 (alias runtest)
 (deps %{bin:olly} test_gc_stats.exe)
 (action
  (run olly gc-stats "./test_gc_stats.exe")))

(rule
 (alias runtest)
 (deps %{bin:olly} test_gc_stats.exe)
 (action
  (run olly gc-stats "./test_gc_stats.exe 19")))

(rule
 (alias runtest)
 (enabled_if
  (>= %{ocaml_version} 5.1.0))
 (deps %{bin:olly} test_fib.exe)
 (action
  (progn
   (run olly trace test.trace ./test_fib.exe))))

(rule
 (alias runtest)
 (enabled_if
  (>= %{ocaml_version} 5.1.0))
 (deps %{bin:olly} test_fib.exe)
 (action
  (progn
   (run olly trace --format=json test-json.trace ./test_fib.exe))))
