(library
 (name olly_gc_stats)
 (optional)
 (libraries olly_common hdr_histogram)
 (foreign_stubs
  (language c)
  ; -g keeps DWARF symbols and -fno-omit-frame-pointer keeps frame pointers, so
  ; sampling profilers can unwind through and name the native consumer's frames.
  ; Both are negligible at runtime (FP costs a register; -g is zero-cost) and
  ; this is a profiling tool, so they are always on.
  (flags
   (:standard -g -fno-omit-frame-pointer))
  (names gc_counter_stubs)))

(rule
 (deps olly_gc_stats.5.0.ml)
 (target olly_gc_impl.ml)
 (enabled_if
  (< %{ocaml_version} 5.3))
 (action
  (copy %{deps} %{target})))

(rule
 (deps olly_gc_stats.5.3.ml)
 (target olly_gc_impl.ml)
 (enabled_if
  (>= %{ocaml_version} 5.3))
 (action
  (copy %{deps} %{target})))

(rule
 (deps gc_counters_shim.5.3.ml)
 (target gc_counters_shim.ml)
 (enabled_if
  (and
   (>= %{ocaml_version} 5.3)
   (< %{ocaml_version} 5.5)))
 (action
  (copy %{deps} %{target})))

(rule
 (deps gc_counters_shim.5.5.ml)
 (target gc_counters_shim.ml)
 (enabled_if
  (>= %{ocaml_version} 5.5))
 (action
  (copy %{deps} %{target})))
