(library
 (name olly_trace)
 (libraries olly_common olly_format_backend))

(rule
 (target olly_custom_events.ml)
 (enabled_if
  (>= %{ocaml_version} 5.1.0))
 (action
  (copy olly_custom_events.yes.ml %{target})))

(rule
 (target olly_custom_events.ml)
 (enabled_if
  (< %{ocaml_version} 5.1.0))
 (action
  (copy olly_custom_events.no.ml %{target})))
