(library
 (name olly_format_backend)
 (modules olly_format_backend)
 (libraries olly_rte_shim))

(library
 (name olly_format_json)
 (modules olly_format_json)
 (libraries olly_format_backend))

(library
 (name olly_format_fuchsia)
 (modules olly_format_fuchsia)
 (optional)
 (libraries olly_format_backend tracing))
